--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@copilotkit/react-core": "1.51.0",
     "@copilotkit/react-ui": "1.51.0",
     "@copilotkit/runtime": "1.51.0",
+    "framer-motion": "^12.26.2",
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
