--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Python Backend Service
   backend:
@@ -8,23 +6,14 @@ services:
       dockerfile: Dockerfile
     container_name: ai-website-backend
     ports:
-      - "8123:8123"
-    environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - LANGCHAIN_API_KEY=${LANGCHAIN_API_KEY}
-      - LANGCHAIN_TRACING_V2=${LANGCHAIN_TRACING_V2:-false}
-      - LANGCHAIN_PROJECT=${LANGCHAIN_PROJECT:-ai-website}
+      - "3008:8123"
+    env_file:
+      - .env
     volumes:
       # Persist ChromaDB data
       - ./agent/chroma_db:/app/chroma_db
       # Mount source code for development (optional, remove for production)
       - ./agent:/app
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8123/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    restart: unless-stopped
     networks:
       - ai-website-network
 
@@ -35,10 +24,9 @@ services:
       dockerfile: Dockerfile
     container_name: ai-website-frontend
     ports:
-      - "3000:3000"
-    environment:
-      - NEXT_PUBLIC_API_URL=http://backend:8123
-      - NODE_ENV=production
+      - "3009:3000"
+    env_file:
+      - .env
     depends_on:
       - backend
     restart: unless-stopped
